--- a/TypeScript/ITVDN/pages/01-01-variables.html
+++ b/TypeScript/ITVDN/pages/01-01-variables.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Var scoping</title>
-    <script src="/dist/02-var-scoping.js"></script>
+    <script src="/dist/01-variables/01-variables.js"></script>
 </head>
 <body>
     <a href="/index.html">Back home</a>
