--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -8,8 +8,9 @@
 <body>
     <h1>TypeScript Fundamentals</h1>
     <h2>Lesson 1. Data type</h2>
-    <section>
+    <br>
         <h3>Variables</h3>
+        <a href="/pages/01-01-variables.html">01-02-var-scoping.html</a></br>
         <a href="/pages/01-02-var-scoping.html">01-02-var-scoping.html</a>
     </section>
 </body>
