add lesson 3 let

--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -11,7 +11,8 @@
     <br>
         <h3>Variables</h3>
         <a href="/pages/01-01-variables.html">01-02-var-scoping.html</a></br>
-        <a href="/pages/01-02-var-scoping.html">01-02-var-scoping.html</a>
+        <a href="/pages/01-02-var-scoping.html">01-02-var-scoping.html</a></br>
+        <a href="/pages/01-03-let-scoping.html">01-03-let-scoping.html</a></br>
     </section>
 </body>
 </html>
