--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -14,6 +14,7 @@
         <a href="/pages/01-02-var-scoping.html">01-02-var-scoping.html</a></br>
         <a href="/pages/01-03-let-scoping.html">01-03-let-scoping.html</a></br>
         <a href="/pages/01-04-types.html">01-04-let-scoping.html</a></br>
+        <a href="/pages/01-05-arrays.html">01-05-arrays.html</a></br>
     </section>
 </body>
 </html>
