--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -16,6 +16,7 @@
         <a href="/pages/01-04-types.html">01-04-let-scoping.html</a></br>
         <a href="/pages/01-05-arrays.html">01-05-arrays.html</a></br>
         <a href="/pages/01-06-tuples.html">01-06-tuples.html</a></br>
+        <a href="/pages/01-07-enums.html">01-07-enums.html</a></br>
     </section>
 </body>
 </html>
