lesson 8 any type

--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -17,6 +17,7 @@
         <a href="/pages/01-05-arrays.html">01-05-arrays.html</a></br>
         <a href="/pages/01-06-tuples.html">01-06-tuples.html</a></br>
         <a href="/pages/01-07-enums.html">01-07-enums.html</a></br>
+        <a href="/pages/01-08-any.html">01-08-any.html</a></br>
     </section>
 </body>
 </html>
