--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -9,6 +9,7 @@
     <h1>TypeScript Fundamentals</h1>
     <h2>Lesson 1. Data type</h2>
     <br>
+    <section>
         <h3>Variables</h3>
         <a href="/pages/01-01-variables.html">01-02-var-scoping.html</a></br>
         <a href="/pages/01-02-var-scoping.html">01-02-var-scoping.html</a></br>
@@ -18,6 +19,10 @@
         <a href="/pages/01-06-tuples.html">01-06-tuples.html</a></br>
         <a href="/pages/01-07-enums.html">01-07-enums.html</a></br>
         <a href="/pages/01-08-any.html">01-08-any.html</a></br>
+    </section>
+    <section>
+        <h3>Functions</h3>
+        <a href="/pages/02-01-functions.html">02-01-functions.html</a></br>
     </section>
 </body>
 </html>
