--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -24,6 +24,7 @@
         <h3>Functions</h3>
         <a href="/pages/02-01-functions.html">02-01-functions.html</a></br>
         <a href="/pages/02-02-function-type.html">02-01-functions.html</a></br>
+        <a href="/pages/02-03-optional-parameter.html">02-03-optional-parameter.html</a></br>
     </section>
 </body>
 </html>
