--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -26,6 +26,7 @@
         <a href="/pages/02-02-function-type.html">02-01-functions.html</a></br>
         <a href="/pages/02-03-optional-parameter.html">02-03-optional-parameter.html</a></br>
         <a href="/pages/02-04-rest-parameters.html">02-04-rest-parameters.html</a></br>
+        <a href="/pages/02-05-context.html">02-05-context.html</a></br>
     </section>
 </body>
 </html>
