--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -27,6 +27,7 @@
         <a href="/pages/02-03-optional-parameter.html">02-03-optional-parameter.html</a></br>
         <a href="/pages/02-04-rest-parameters.html">02-04-rest-parameters.html</a></br>
         <a href="/pages/02-05-context.html">02-05-context.html</a></br>
+        <a href="/pages/02-06-arrow-functions.html">02-06-arrow-functions.html</a></br>
     </section>
 </body>
 </html>
