--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -7,27 +7,35 @@
 </head>
 <body>
     <h1>TypeScript Fundamentals</h1>
-    <h2>Lesson 1. Data type</h2>
-    <br>
-    <section>
-        <h3>Variables</h3>
-        <a href="/pages/01-01-variables.html">01-02-var-scoping.html</a></br>
-        <a href="/pages/01-02-var-scoping.html">01-02-var-scoping.html</a></br>
-        <a href="/pages/01-03-let-scoping.html">01-03-let-scoping.html</a></br>
-        <a href="/pages/01-04-types.html">01-04-let-scoping.html</a></br>
-        <a href="/pages/01-05-arrays.html">01-05-arrays.html</a></br>
-        <a href="/pages/01-06-tuples.html">01-06-tuples.html</a></br>
-        <a href="/pages/01-07-enums.html">01-07-enums.html</a></br>
-        <a href="/pages/01-08-any.html">01-08-any.html</a></br>
-    </section>
-    <section>
-        <h3>Functions</h3>
-        <a href="/pages/02-01-functions.html">02-01-functions.html</a></br>
-        <a href="/pages/02-02-function-type.html">02-01-functions.html</a></br>
-        <a href="/pages/02-03-optional-parameter.html">02-03-optional-parameter.html</a></br>
-        <a href="/pages/02-04-rest-parameters.html">02-04-rest-parameters.html</a></br>
-        <a href="/pages/02-05-context.html">02-05-context.html</a></br>
-        <a href="/pages/02-06-arrow-functions.html">02-06-arrow-functions.html</a></br>
-    </section>
+    <div>
+        <h2>Lesson 1. Data type</h2>
+        <section>
+            <h3>Variables</h3>
+            <a href="/pages/01-01-variables.html">01-02-var-scoping.html</a></br>
+            <a href="/pages/01-02-var-scoping.html">01-02-var-scoping.html</a></br>
+            <a href="/pages/01-03-let-scoping.html">01-03-let-scoping.html</a></br>
+            <a href="/pages/01-04-types.html">01-04-let-scoping.html</a></br>
+            <a href="/pages/01-05-arrays.html">01-05-arrays.html</a></br>
+            <a href="/pages/01-06-tuples.html">01-06-tuples.html</a></br>
+            <a href="/pages/01-07-enums.html">01-07-enums.html</a></br>
+            <a href="/pages/01-08-any.html">01-08-any.html</a></br>
+        </section>
+        <section>
+            <h3>Functions</h3>
+            <a href="/pages/02-01-functions.html">02-01-functions.html</a></br>
+            <a href="/pages/02-02-function-type.html">02-02-function-type.html</a></br>
+            <a href="/pages/02-03-optional-parameter.html">02-03-optional-parameter.html</a></br>
+            <a href="/pages/02-04-rest-parameters.html">02-04-rest-parameters.html</a></br>
+            <a href="/pages/02-05-context.html">02-05-context.html</a></br>
+            <a href="/pages/02-06-arrow-functions.html">02-06-arrow-functions.html</a></br>
+        </section>
+    </div>
+    <div>
+        <h2>Lesson 2. Classes and Interfaces</h2>
+        <section>
+            <h3>Classes</h3>
+            <a href="/pages/03-01-simple-classes.html">03-01-simple-classes.html</a></br>
+        </section>
+    </div>
 </body>
 </html>
