--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -35,6 +35,7 @@
         <section>
             <h3>Classes</h3>
             <a href="/pages/03-01-simple-classes.html">03-01-simple-classes.html</a></br>
+            <a href="/pages/03-02-constructor.html">03-02-constructor.html</a></br>
         </section>
     </div>
 </body>
