--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -36,6 +36,7 @@
             <h3>Classes</h3>
             <a href="/pages/03-01-simple-classes.html">03-01-simple-classes.html</a></br>
             <a href="/pages/03-02-constructor.html">03-02-constructor.html</a></br>
+            <a href="/pages/03-03-public-private.html">03-03-public-private.html</a></br>
         </section>
     </div>
 </body>
