--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -37,6 +37,7 @@
             <a href="/pages/03-01-simple-classes.html">03-01-simple-classes.html</a></br>
             <a href="/pages/03-02-constructor.html">03-02-constructor.html</a></br>
             <a href="/pages/03-03-public-private.html">03-03-public-private.html</a></br>
+            <a href="/pages/03-04-abstract-classes.html">03-04-abstract-classes.html</a></br>
         </section>
     </div>
 </body>
