--- a/TypeScript/ITVDN/index.html
+++ b/TypeScript/ITVDN/index.html
@@ -41,5 +41,12 @@
             <a href="/pages/03-05-iterfaces.html">03-05-iterfaces.html</a></br>
         </section>
     </div>
+    <div>
+        <h2>Lesson 3. Generics</h2>
+        <section>
+            <h3>Generics</h3>
+            <a href="/pages/04-01-foreach.html">04-01-foreach.html</a></br>
+        </section>
+    </div>
 </body>
 </html>
